; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_choice_field_option.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_choice_field_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Opt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pdf_choice_field_option(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* @Opt, align 4
  %15 = call i32 @PDF_NAME(i32 %14)
  %16 = call i32* @pdf_dict_get_inheritable(i32* %12, i32* %13, i32 %15)
  store i32* %16, i32** %10, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %10, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i32* @pdf_array_get(i32* %17, i32* %18, i32 %19)
  store i32* %20, i32** %11, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = call i32 @pdf_array_len(i32* %21, i32* %22)
  %24 = icmp eq i32 %23, 2
  br i1 %24, label %25, label %33

25:                                               ; preds = %4
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %11, align 8
  %28 = load i32, i32* %8, align 4
  %29 = icmp ne i32 %28, 0
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i32 0, i32 1
  %32 = call i8* @pdf_array_get_text_string(i32* %26, i32* %27, i32 %31)
  store i8* %32, i8** %5, align 8
  br label %37

33:                                               ; preds = %4
  %34 = load i32*, i32** %6, align 8
  %35 = load i32*, i32** %11, align 8
  %36 = call i8* @pdf_to_text_string(i32* %34, i32* %35)
  store i8* %36, i8** %5, align 8
  br label %37

37:                                               ; preds = %33, %25
  %38 = load i8*, i8** %5, align 8
  ret i8* %38
}

declare dso_local i32* @pdf_dict_get_inheritable(i32*, i32*, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32* @pdf_array_get(i32*, i32*, i32) #1

declare dso_local i32 @pdf_array_len(i32*, i32*) #1

declare dso_local i8* @pdf_array_get_text_string(i32*, i32*, i32) #1

declare dso_local i8* @pdf_to_text_string(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
